moved everything from srcs to the root of philo folder

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: mevangel <mevangel@student.42heilbronn.    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/01/28 16:25:24 by mevangel          #+#    #+#              #
-#    Updated: 2024/02/07 04:33:02 by mevangel         ###   ########.fr        #
+#    Updated: 2024/02/09 20:22:30 by mevangel         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -19,7 +19,7 @@ GREEN	=	\033[0;32m
 CYAN	=	\033[0;36m
 CLEAR	=	\033[0m
 
-SRC_DIR	=	./srcs/
+SRC_DIR	=	./
 OBJ_DIR	=	./objs/
 
 SRC		=	$(SRC_DIR)main.c \
